Fix 404 container spacing, fix z index issue

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -104,7 +104,7 @@ a {
 
 .navbar {
   // text-shadow: 2px 2px 4px lightgrey;
-
+  z-index: 9999;
   @media (max-width: 820px) {
     background-color: white;
     text-shadow: none;
@@ -211,7 +211,7 @@ a {
   left: 0;
   right: 0;
   margin: auto;
-  z-index: 9999;
+  z-index: 9998;
 }
 
 
